# mlcommons-inference

vsi/: CMakeLists.txt  README.md  build.sh  mlperf_runner.cc  run.sh
vsi/single_stream_submission/: accuracy.txt  mlperf_log_accuracy.json  mlperf_log_detail.txt  mlperf_log_summary.txt
